--- a/base.html
+++ b/base.html
@@ -18,10 +18,12 @@
 
 <div id="container">
 	<header>
-
+            <img src="img/logo.png" alt="Ada Trouwborst :: Coaching & Advies" />
+            <h1>Ada Trouwborst</h1>
+            <h2>Coaching &amp; Advies</h2>
 	</header>
 	<div id="main" role="main">
-
+            Test
 	</div>
 	<footer>
 
