--- a/base.html
+++ b/base.html
@@ -18,12 +18,25 @@
 
 <div id="container">
 	<header>
-            <img src="img/logo.png" alt="Ada Trouwborst :: Coaching & Advies" />
-            <h1>Ada Trouwborst</h1>
-            <h2>Coaching &amp; Advies</h2>
+            <div id="logo">
+                <img src="img/logo.png" alt="Ada Trouwborst :: Coaching & Advies" />
+                <h1>Ada Trouwborst</h1>
+                <h2>Coaching &amp; Advies</h2>
+            </div>
+            
+            <nav>
+                <ul>
+                    <li><a>Item 1</a></li>
+                    <li><a>Item 2</a></li>
+                    <li><a>Item 3</a></li>
+                    <li><a>Item 4</a></li>
+                </ul>
+            </nav>
+            
+            <hr />
 	</header>
 	<div id="main" role="main">
-            Test
+            <h1>Test</h1>
 	</div>
 	<footer>
 
